change in layout

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       </div> <!-- end navbar-header -->
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
-        <a href="#" class="btn btn-success navbar-btn navbar-right">Buy Now</a>
+        <a href="#" class="btn btn-default navbar-btn navbar-right">Contact Us</a>
 
         <ul class="nav navbar-nav">
           <li class="dropdown">
@@ -84,8 +84,7 @@
               <li><a href="#">Partner 3</a></li>
             </ul>
           </li>
-          <li><a href="#section-testimonials">Careers</a></li>
-          <li><a href="#section-features">Contact us</a></li>
+          <li><a href="#">Careers</a></li>
         </ul>
       </div> <!-- end collapse -->
     </div> <!-- end container -->
@@ -123,5 +122,108 @@
       </div> <!-- end carousel -->
     </section>
   </div>
+
+  <div class="container">
+    <!-- TESTIMONIALS -->
+    <section>
+      <div class="page-header" id="section-testimonials">
+        <h2>About Us. <small>This is what our customers are saying about us.</small></h2>
+      </div> <!-- end page-header -->
+
+      <div class="row">
+        <div class="col-md-4">
+          <blockquote>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, sit accusamus excepturi labore nihil cumque iusto voluptatem. Porro, possimus, harum.</p>
+            <footer>Cite author</footer>
+          </blockquote>
+        </div>
+        <div class="col-md-4">
+          <blockquote>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, sit accusamus excepturi labore nihil cumque iusto voluptatem. Porro, possimus, harum.</p>
+            <footer>Cite author</footer>
+          </blockquote>
+        </div>
+        <div class="col-md-4">
+          <blockquote>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, sit accusamus excepturi labore nihil cumque iusto voluptatem. Porro, possimus, harum.</p>
+            <footer>Cite author</footer>
+          </blockquote>
+        </div>
+      </div> <!-- end row -->
+
+      <p class="text-center"><em>Wanna tell us about the product? Head over to the contact form.</em></p>
+      <p class="text-center"><a href="#section-contact" class="btn btn-default">Contact Us</a></p>
+    </section>
+  </div> <!-- end container -->
+
+  <div class="container">
+    <!-- CONTACT -->
+    <section>
+      <div class="page-header" id="section-contact">
+        <h2>Contact Us. <small>Let's get in touch.</small></h2>
+      </div> <!-- end page-header -->
+
+      <div class="row">
+        <div class="col-lg-4">
+          <p>To send us a message, use the contact form or the information below.</p>
+
+          <address>
+            <strong>4C Global Solutions</strong><br>
+            121 King Street, <br>
+            Victoria 3000 Dubai<br>
+            <abbr title="Phone">P: </abbr> +61 3 8376 6284
+          </address>
+        </div>
+        <div class="col-lg-8">
+          <form action="#" class="form-horizontal" role="form">
+            <div class="form-group">
+              <label for="contact-name" class="col-lg-2 control-label">Name</label>
+
+              <div class="col-lg-10">
+                <input type="text" class="form-control" id="contact-name" placeholder="Name">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="contact-email" class="col-lg-2 control-label">Email address</label>
+
+              <div class="col-lg-10">
+                <input type="email" class="form-control" id="contact-email" placeholder="Email address">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="contact-website" class="col-lg-2 control-label">Website</label>
+
+              <div class="col-lg-10">
+                <input type="url" class="form-control" id="contact-website" placeholder="Website">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="contact-message" class="col-lg-2 control-label">Message</label>
+
+              <div class="col-lg-10">
+                <textarea name="contact-message" id="contact-message" class="form-control" cols="30" rows="10" placeholder="Message"></textarea>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-lg-10 col-lg-offset-2">
+                <button type="submit" class="btn btn-primary">Send Message</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div> <!-- end row -->
+    </section>
+  </div>
+  <div class="container">
+    <footer>
+
+      <div class="container text-center">
+        <hr>
+        <p>&copy; Copyright 2014.</p>
+      </div> <!-- end container -->
+
+    </footer>
+  </div>
+
 </body>
 </html>
