--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,12 @@
     .dropdown:hover .dropdown-menu {
       display: block;
     }
+    @media screen and (max-width : 480px){
+      .navbar-brand img {
+        display: none;
+      }
+    }
+
   </style>
 </head>
 <body data-spy="scroll" data-target="#main-navbar">
