--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,14 @@
     .dropdown:hover .dropdown-menu {
       display: block;
     }
+    .dropdown-menu {
+      background-color: #014477;
+
+    }
+
+    .dropdown-menu li a{
+      color: #fff;
+    }
     @media screen and (max-width : 480px){
       .navbar-brand img {
         display: none;
