--- a/public/index1.html
+++ b/public/index1.html
@@ -100,7 +100,9 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products and services <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Data Center Services</a></li>
+              <li><a href="/Structured-Cabling">Structured Cabling</a></li>
+              <li class="divider"></li>
+              <li><a href="/Data-Center-Services">Data Center Services</a></li>
               <li class="divider"></li>
               <li><a href="#">Enter Infrastructure Services</a></li>
               <li class="divider"></li>
@@ -165,37 +167,26 @@
   </div>
 
   <div class="container">
-    <!-- TESTIMONIALS -->
-    <section>
-      <div class="page-header" id="section-testimonials">
-        <h2>About Us. <small>This is what our customers are saying about us.</small></h2>
-      </div> <!-- end page-header -->
-
-      <div class="row">
-        <div class="col-md-4">
-          <blockquote>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, sit accusamus excepturi labore nihil cumque iusto voluptatem. Porro, possimus, harum.</p>
-            <footer>Cite author</footer>
-          </blockquote>
-        </div>
-        <div class="col-md-4">
-          <blockquote>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, sit accusamus excepturi labore nihil cumque iusto voluptatem. Porro, possimus, harum.</p>
-            <footer>Cite author</footer>
-          </blockquote>
-        </div>
-        <div class="col-md-4">
-          <blockquote>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, sit accusamus excepturi labore nihil cumque iusto voluptatem. Porro, possimus, harum.</p>
-            <footer>Cite author</footer>
-          </blockquote>
-        </div>
-      </div> <!-- end row -->
-
-      <p class="text-center"><em>Wanna tell us about the product? Head over to the contact form.</em></p>
-      <p class="text-center"><a href="#section-contact" class="btn btn-default">Contact Us</a></p>
-    </section>
-  </div> <!-- end container -->
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Who we are?</h2>
+        <p>
+          4CGS, formed by a group of IT professionals with the objective of providing commendable IT solutions and associated after sales service to our clients all under a single roof. If it's anything about IT then it's 4CGS!
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <h2>What we do?</h2>
+        <p>
+          We specialize in providing IT products and services in various domains like IT infrastructure services where we meet all your network infra needs by providing design and installation of structured cabling, Active components, Uninterruptible power supply, Access Control System, CCTV system Networking, Security, Storage, Software services, Power and cooling solutions for data centers, all of these by partnering with the best brands in the world.
+        </p>
+        <p>
+          
+        </p>
+      </div>
+    </div>
+  </div>
 
   
     <footer>
